tree-sitter-toke/test/corpus/declarations.txt
================================================================================
Module declaration
================================================================================

m=main;

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier))))

================================================================================
Module declaration with dotted path
================================================================================

m=std.io;

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)
      (identifier))))

================================================================================
Import declaration
================================================================================

m=main;
i=io:std.io;

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (import_declaration
    (identifier)
    (module_path
      (identifier)
      (identifier))))

================================================================================
Type declaration (struct)
================================================================================

m=main;
t=point{x:$i64;y:$i64};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (type_declaration
    (identifier)
    (field_list
      (field
        (identifier)
        (type_expression
          (sigil_type)))
      (field
        (identifier)
        (type_expression
          (sigil_type))))))

================================================================================
Function declaration with body
================================================================================

m=main;
f=add(a:$i64;b:$i64):$i64{<a+b};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (sigil_type)))
      (parameter
        (identifier)
        (type_expression
          (sigil_type))))
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (additive_expression
          (identifier)
          (identifier))))))

================================================================================
Function declaration without body (extern)
================================================================================

m=main;
f=puts(s:$str):$i64;

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (sigil_type))))
    (return_spec
      (type_expression
        (sigil_type)))))

================================================================================
Constant declaration
================================================================================

m=main;
max_size=1024:$i64;

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (const_declaration
    (identifier)
    (integer_literal)
    (type_expression
      (sigil_type))))

================================================================================
Function with error return type
================================================================================

m=main;
f=parse(s:$str):$i64!$str{<0};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (sigil_type))))
    (return_spec
      (type_expression
        (sigil_type))
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (integer_literal)))))
