tree-sitter-toke/test/corpus/expressions.txt
================================================================================
Integer literal
================================================================================

m=main;
f=f():$i64{<42};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (integer_literal)))))

================================================================================
Float literal
================================================================================

m=main;
f=f():$f64{<3.14};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (float_literal)))))

================================================================================
String literal
================================================================================

m=main;
f=f():$str{<"hello"};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (string_literal)))))

================================================================================
Boolean literals
================================================================================

m=main;
f=f():$bool{<true};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (boolean_literal)))))

================================================================================
Binary arithmetic expressions
================================================================================

m=main;
f=f():$i64{<1+2*3};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (additive_expression
          (integer_literal)
          (multiplicative_expression
            (integer_literal)
            (integer_literal)))))))

================================================================================
Unary negation
================================================================================

m=main;
f=f(x:$i64):$i64{< -x};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (sigil_type))))
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (unary_expression
          (identifier))))))

================================================================================
Unary logical not
================================================================================

m=main;
f=f(x:$bool):$bool{< !x};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (sigil_type))))
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (unary_expression
          (identifier))))))

================================================================================
Comparison expression
================================================================================

m=main;
f=f(a:$i64;b:$i64):$bool{<a>b};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (sigil_type)))
      (parameter
        (identifier)
        (type_expression
          (sigil_type))))
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (compare_expression
          (identifier)
          (identifier))))))

================================================================================
Function call expression
================================================================================

m=main;
f=f():$i64{<add(1;2)};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (call_expression
          (identifier)
          (argument_list
            (integer_literal)
            (integer_literal)))))))

================================================================================
Field access expression
================================================================================

m=main;
f=f(p:point):$i64{<p.x};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (identifier))))
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (postfix_expression
          (identifier)
          (identifier))))))

================================================================================
Array indexing via get method
================================================================================

m=main;
f=f(arr:@($i64)):$i64{<arr.get(0)};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (array_type
            (type_expression
              (sigil_type))))))
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (call_expression
          (postfix_expression
            (identifier)
            (identifier))
          (argument_list
            (integer_literal)))))))

================================================================================
Cast expression
================================================================================

m=main;
f=f(x:$i64):$f64{<x as $f64};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_expression
          (sigil_type))))
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (cast_expression
          (identifier)
          (type_expression
            (sigil_type)))))))

================================================================================
Array literal
================================================================================

m=main;
f=f():@($i64){<@(1;2;3)};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (array_type
          (type_expression
            (sigil_type)))))
    (statement_list
      (return_statement
        (array_literal
          (integer_literal)
          (integer_literal)
          (integer_literal))))))

================================================================================
Struct literal
================================================================================

m=main;
t=point{x:$i64;y:$i64};
f=f():point{<point{x:1;y:2}};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (type_declaration
    (identifier)
    (field_list
      (field
        (identifier)
        (type_expression
          (sigil_type)))
      (field
        (identifier)
        (type_expression
          (sigil_type)))))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (identifier)))
    (statement_list
      (return_statement
        (struct_literal
          (identifier)
          (field_init
            (identifier)
            (integer_literal))
          (field_init
            (identifier)
            (integer_literal)))))))

================================================================================
Error propagation expression
================================================================================

m=main;
f=f():$i64!$str{<parse("42")!$str};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type))
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (propagate_expression
          (call_expression
            (identifier)
            (argument_list
              (string_literal)))
          (type_expression
            (sigil_type)))))))

================================================================================
Parenthesized expression
================================================================================

m=main;
f=f():$i64{<(1+2)*3};

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_path
      (identifier)))
  (function_declaration
    (identifier)
    (return_spec
      (type_expression
        (sigil_type)))
    (statement_list
      (return_statement
        (multiplicative_expression
          (additive_expression
            (integer_literal)
            (integer_literal))
          (integer_literal))))))
